[gd_scene load_steps=5 format=3 uid="uid://c1okr2og6im2w"]

[ext_resource type="Script" uid="uid://xbxp6xqyldox" path="res://UI/main_menu.gd" id="1_p8ccj"]

[sub_resource type="LabelSettings" id="LabelSettings_2plxb"]
font_size = 120

[sub_resource type="Texture2DRD" id="Texture2DRD_58kv7"]

[sub_resource type="LabelSettings" id="LabelSettings_ygnpl"]
font_size = 60

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_p8ccj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1158.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonBackgroundPanel" type="Panel" parent="UI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -503.0
offset_right = 209.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/ButtonBackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="ControlsButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="Options" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="QuitButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="Label1" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 102.0
offset_top = 108.0
offset_right = 365.0
offset_bottom = 441.0
text = "Ruin
"
label_settings = SubResource("LabelSettings_2plxb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 670.0
offset_top = 92.0
offset_right = 1204.0
offset_bottom = 257.0
text = "Run"
label_settings = SubResource("LabelSettings_2plxb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="TextureRect" type="TextureRect" parent="ControlMenu"]
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("Texture2DRD_58kv7")

[node name="CenterContainer" type="CenterContainer" parent="ControlMenu/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ControlMenu/TextureRect/CenterContainer"]
top_level = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ControlMenu/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Use Arrows  to move ←→"
label_settings = SubResource("LabelSettings_ygnpl")

[node name="Label2" type="Label" parent="ControlMenu/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Use Space Bar to Jump"
label_settings = SubResource("LabelSettings_ygnpl")

[node name="Label3" type="Label" parent="ControlMenu/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Use A W S D to solve the quick time 
events"
label_settings = SubResource("LabelSettings_ygnpl")

[node name="Label4" type="Label" parent="ControlMenu/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "\"Esc\" For Pause Menu"
label_settings = SubResource("LabelSettings_ygnpl")

[node name="Button" type="Button" parent="ControlMenu/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="UI/Control/ButtonBackgroundPanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/Control/ButtonBackgroundPanel/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="UI/Control/ButtonBackgroundPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ControlMenu/TextureRect/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
